--- a/note_to_self/package.json
+++ b/note_to_self/package.json
@@ -6,7 +6,8 @@
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "sfcookies": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
